# upcast

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  coverage.json  output.txt  poetry.lock.backup  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: openspec-update-specs-from-detailed-design.prompt.md
.github/scripts/: compare-scan-yaml.py
.github/workflows/: main.yml  publish-on-tag.yml  scanner-integration.yml
docs/: README.md  type-inference.md
docs/plans/: 2026-04-22-scanner-follow-up-improvements.md  2026-04-23-cli-functional-test-rollout.md  2026-04-23-scan-upcast-repair-plan.md
docs/scanners/: blocking-operations.md  complexity-patterns.md  concurrency-patterns.md  django-models.md  django-settings.md  django-urls.md  env-vars.md  exception-handlers.md  http-requests.md  logging.md  metrics.md  module-symbols.md  redis-usage.md  signals.md  unit-tests.md
example/markdown-examples/: README.md  complexity-patterns-en.md  complexity-patterns-zh.md  django-models-en.md  django-models-zh.md  env-vars-en.md  env-vars-zh.md  http-requests-en.md  http-requests-zh.md  signals-en.md  signals-zh.md
example/markdown-reports/: blocking-operations.md  complexity-patterns.md  concurrency-patterns.md  django-models.md  django-settings.md  django-urls.md  env-vars.md  exception-handlers.md  http-requests.md  logging.md  metrics.md  module-symbols.md  redis-usage.md  signals.md  unit-tests.md
example/scan-results/: ANALYSIS_REPORT.md  README.md  blocking-operations.yaml  complexity-patterns.yaml  concurrency-patterns.yaml  django-models.yaml  django-settings.yaml  django-urls.yaml  env-vars.yaml  exception-handlers.yaml  http-requests.yaml  logging.yaml  metrics.yaml  redis-usage.yaml  signals.yaml  unit-tests.yaml
p_ast/: core.py  exporter.py  main.py
p_ast/plugins/: base.py  env_var.py
tests/: TEST_PLAN.md  conftest.py  test_concurrency_integration.py  test_django_model.py  test_file_filtering.py  test_foo.py  test_plugins_env_var.py  test_render.py
tests/fixtures/: common_patterns.py  complexity_duration_sample.py  metrics_duration_sample.py  test_utils.py  (+1 more)
upcast/: core.py  exporter.py  main.py  render.py  report_generator.py  utils.py
(+522 files in other folders)
